fixed footer spacing issue

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -33,6 +33,10 @@ a {
   }
 }
 
+#main {
+  min-height: 50%;
+}
+
 .title {
   text-align: center;
   color: $jet;
@@ -40,13 +44,14 @@ a {
 
 .section1 {
   background-color: $white;
-  min-height: 75%;
+  height: 75%;
+  // position: fixed;
 }
 
 .section2{
   background-color: $primary-color;
-  min-height: 25%;
-  // height: auto;
+  // min-height: 25%;
+  height: auto;
   border-top: 4px solid $smoke;
   position: relative;
 }
@@ -71,6 +76,7 @@ a {
   }
   #subpanel {
     text-align: center;
+    margin-top: 1%;
   }
 }
 
